# to-gaze-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/model/: video.rs
domain/src/port/primary/: command.rs
domain/src/port/secondary/: video.rs
domain/src/usecases/: video.rs
infra/: Cargo.toml
infra/src/: config.rs  lib.rs  main.rs  startup.rs  state.rs  tg.rs
infra/src/db/: in_memory.rs
infra/src/tg/: endpoints.rs
to_gaze_bot/: __main__.py
to_gaze_bot/data/: config.py
to_gaze_bot/db/db_api/storages/: base.py
to_gaze_bot/filters/: __init__.py  link.py
to_gaze_bot/handlers/user/: __init__.py  start.py  video.py
to_gaze_bot/keyboards/default/: consts.py
to_gaze_bot/keyboards/inline/: consts.py
to_gaze_bot/keyboards/keyboard_utils/: schema_generator.py
to_gaze_bot/utils/: logging.py
to_gaze_bot/web_handlers/: tg_updates.py
