[tool.poetry]
name = "to-gaze-bot"
version = "0.1.0"
description = "Bot for getting access to videos from youtube"
authors = ["pguin-sudo <138515193+pguin-sudo@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
logging = "^0.4.9.6"
aiogram = "^3.16.0"
structlog = "^24.4.0"
orjson = "^3.10.12"
pydantic = "^2.10.4"
redis = "^5.2.1"
asyncio = "^3.4.3"
tenacity = "^9.0.0"
aiojobs = "^1.3.0"
asyncpg = "^0.30.0"
environs = "^11.2.1"
urlextract = "^1.9.0"
yt-dlp = "^2024.12.23"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pyright = "^1.1.391"

[tool.ruff]
target-version = "py313"
preview = true

[tool.ruff.lint]
unfixable = ["B"]

[tool.ruff.format]
line-ending = "lf"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
