[package]
name = "infra"
version = "0.1.0"
edition = "2021"
description = "Bot for getting access to videos from youtube."
readme = "README.md"
repository = "https://github.com/pguin-sudo/to-gaze-bot"
license-file = "../LICENSE"

[lib]
path = "src/lib.rs"

[[bin]]
name = "to-gaze-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
domain = { path = "../domain", version = "0.1.0" }
dptree = "0.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
log-panics = "2.1.0"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
serde = "1.0.216"
teloxide = { version = "0.13.0", features = ["macros"] }
teloxide_tests = "0.2.0"
tokio = { version = "1.42.0", features = ["macros", "process", "rt-multi-thread"] }
